--- a/1.1_transect_continuous.Rmd
+++ b/1.1_transect_continuous.Rmd
@@ -5,9 +5,15 @@ date: "2024-04-23"
 output: html_document
 ---
 
+<-- 1.1_transect_continuous.Rmd
+
+---> 1_spprich.Rmd
+
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
 
 # Code to hang on to
 - mutate(site_rep = paste(site, transect, sep = "_")) %>% # create a new third column
@@ -3122,7 +3128,8 @@ cover_prep <- cover_bylfstatus_wide %>%
 height_cover <- groupsdash %>% 
   left_join(standheight_mean, by = "site_rep") %>% 
   left_join(cover_prep, by = "site_rep") %>% 
-  mutate(cluster = as.character(cluster))
+  mutate(cluster = as.character(cluster)) %>% 
+  filter(site_rep != "INT5_5")
 
 
 
@@ -3344,7 +3351,7 @@ fig_clusterheight_scatter <- ggplot(data = height_cover %>%
      color = "Cluster") +
   theme_bw() 
 
-fig_clusterheight
+fig_clusterheight_scatter
 
 
 
@@ -3551,7 +3558,7 @@ denspp_transect <- denspp %>%
 
 denspp_cover <- denspp_transect %>%  
   left_join(height_cover %>%  # left join nn grass cover
-  dplyr::select(site, site_rep, grass_nonnative) %>% 
+  dplyr::select(site, site_rep, grass_nonnative, shrub_native) %>% 
   unique()) # 39 transects, missing INT4_1
  
 
@@ -3582,9 +3589,10 @@ fig_den_mature <- ggplot(denspp_cover %>%
    stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = TRUE, color = "red", linewidth = 1) +
     geom_smooth(aes(x = grass_nonnative * 100, y = mature), method = "lm", se = TRUE, linetype = "dashed", color = "gray40", show.legend = TRUE)
    
+# immature
 fig_den_immature <- ggplot(denspp_cover %>% 
          mutate(site = ifelse(str_detect(site, "INT"), "3", site)), 
-       aes(x = grass_nonnative*100, 
+       aes(x = shrub_native*100, 
            y = immature)) +
 
  geom_point(aes(color = site), size = 3, show.legend = TRUE) +
@@ -3609,9 +3617,10 @@ fig_den_immature <- ggplot(denspp_cover %>%
      stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = TRUE, color = "red", linewidth = 1) +
     geom_smooth(aes(x = grass_nonnative * 100, y = immature), method = "lm", se = TRUE, linetype = "dashed", color = "gray40", show.legend = TRUE)
   
+# seedlings
 fig_den_seedling <- ggplot(denspp_cover %>% 
          mutate(site = ifelse(str_detect(site, "INT"), "3", site)), 
-       aes(x = grass_nonnative*100, 
+       aes(x = shrub_native*100, 
            y = seedling)) +
 
  geom_point(aes(color = site), size = 3, show.legend = TRUE) +
